# SeattleFires-Streaming

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml
conf/: deployment.yaml
notebooks/: seattle_api.py
seattle_fires/tasks/: ProcessBronze.py  ProcessGold.py  ProcessSilver.py
seattle_fires/transform/: aggregations.py  castData.py  flattenData.py
seattle_fires/utils/: ReadTables.py  SaveTables.py  SharedSparkInstance.py  constants.py  tableExists.py
tests/: conftest.py  test_aggregate.py
